# rust-axum-with-vite

./: .gitignore  Cargo.toml  Cross.toml.example  README.md  build.rs  package-lock.json
client/: package-lock.json  tsconfig.json  vite.config.ts
client/src/: App.tsx
src/: main.rs
