[package]
name = "rust-axum-with-vite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
npm_rs = "1.0.0"

[dependencies]
axum = { git = "https://github.com/tokio-rs/axum", branch = "main", features=["ws"] }
axum-extra = { git = "https://github.com/tokio-rs/axum", branch = "main", features=["typed-header"] }
hyper = { version = "1.0.0-rc.4", features = ["full"] }
reqwest = { version =  "0.11.18" , features = ["stream"] }
tokio = { version = "1.32.0", features = ["full"] }
tokio-stream = "0.1.14"
tower = "0.4.13"
tower-http = { version = "0.4.3", features = ["fs", "cors", "trace"] }
tower-hyper-http-body-compat = { version = "0.2.0", features = ["http1", "server"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# embed file
rust-embed = { version = "8.0.0", features = ["include-exclude"] }
mime_guess = "2.0.4"

[profile.release]
# strip = true # more slime...
strip = false # default
# codegen-units = 1 # ビルド時間がのびるが小さくなる